# docpilot

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPER_TESTING_REPORT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  PROJECT_STATUS.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v0.1.1.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
ide-integrations/: README.md
ide-integrations/vscode/: package.json
ide-integrations/vscode/src/: extension.ts
src/docpilot/: __init__.py  __main__.py
src/docpilot/cli/: __init__.py  commands.py  interactive.py  ui.py
src/docpilot/core/: __init__.py  analyzer.py  generator.py  models.py  parser.py  type_inference.py
src/docpilot/formatters/: __init__.py  base.py  epytext.py  google.py  numpy.py  rest.py  sphinx.py
src/docpilot/llm/: __init__.py  anthropic.py  base.py  local.py  openai.py
src/docpilot/lsp/: __init__.py  server.py
src/docpilot/templates/: readme.jinja2
src/docpilot/utils/: __init__.py  config.py  file_ops.py
tests/: __init__.py  conftest.py
tests/integration/: test_e2e_workflow.py
tests/unit/: test_config_loading.py  test_epytext_formatter.py  test_error_handling.py  test_file_ops.py  test_interactive.py  test_lsp_server.py  test_mock_provider.py  test_multi_file_processing.py  test_parser.py  test_partial_documentation.py  test_pattern_detection.py  test_rest_formatter.py  test_type_inference.py  test_ui_markup_escape.py
