[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "docpilot"
version = "0.2.0"
description = "AI-powered docstring and documentation generator for Python projects"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "docpilot contributors"}
]
keywords = [
    "documentation",
    "docstring",
    "ai",
    "llm",
    "automation",
    "code-generation",
    "python",
    "developer-tools"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Code Generators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "click>=8.1.0,<9.0.0",
    "rich>=13.0.0,<15.0.0",
    "jinja2>=3.1.0,<4.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "pathspec>=0.11.0,<1.0.0",
    "tenacity>=8.0.0,<9.0.0",
    "structlog>=23.0.0,<25.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
# Provider-specific extras
openai = [
    "openai>=1.0.0,<2.0.0",
    "httpx>=0.27.0,<1.0.0",
    "aiolimiter>=1.1.0,<2.0.0",
]
anthropic = [
    "anthropic>=0.18.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "aiolimiter>=1.1.0,<2.0.0",
]
ollama = [
    "ollama>=0.1.0,<1.0.0",
]
# Backward compatibility - installs all providers
llm = [
    "openai>=1.0.0,<2.0.0",
    "anthropic>=0.18.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "aiolimiter>=1.1.0,<2.0.0",
]
local = [
    "ollama>=0.1.0,<1.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "types-click",
    "types-jinja2",
    "bandit[toml]>=1.7.5",
    "safety>=3.0.0",
    "pip-audit>=2.7.0",
]
all = [
    "docpilot[openai,anthropic,ollama,dev]",
]

[project.scripts]
docpilot = "docpilot.__main__:main"

[project.urls]
Homepage = "https://github.com/0xV8/docpilot"
Documentation = "https://github.com/0xV8/docpilot#readme"
Repository = "https://github.com/0xV8/docpilot"
Issues = "https://github.com/0xV8/docpilot/issues"
Changelog = "https://github.com/0xV8/docpilot/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/docpilot"]

[tool.hatch.version]
path = "src/docpilot/__init__.py"

# Black configuration
[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py39"
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["ARG", "S101"]

# Mypy configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "ollama.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "docpilot.cli.commands"
warn_return_any = false
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "docpilot.formatters.sphinx"
warn_return_any = false

# Pytest configuration
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=docpilot",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "llm: marks tests that require LLM API access",
]

# Coverage configuration
[tool.coverage.run]
source = ["src/docpilot"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

# Bandit security linter configuration
[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv", "build", "dist"]
skips = ["B101"]  # Skip assert_used (assertions are fine in tests)
